sd21-512-cuda-serve-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd21-512-cuda-svc
spec:
  selector:
    app: sd21-g5-serve
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
