sd21-512-xla-serve-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd21-512-xla-svc
spec:
  selector:
    app: sd21-inf2-serve
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
